# ClaudeAgents

./: .gitignore  GPT5_DIRECT_GUIDE.md  INSTALL_GUIDE.md  PIPELINE_DIRECT_GUIDE.md  QUICK_START.md  README.md  USAGE_GUIDE.md  claude_code_pipeline_design.md  commit_and_push.sh  install.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_simple.py  test_gpt5_direct.py  test_pipeline_direct.py
.claude/agents/: async_converter.md  code_analyzer.md  dev-cc.md  eval-gpt5.md  gpt5-direct.md  intent-cc.md  intent-gpt5.md  intent-merge-cc.md  orchestrator.md  pipeline-direct.md  pipeline.md  plan-cc.md  plan-gpt5.md  plan-merge-cc.md  rollback-cc.md  router.md
.claude/commands/: gpt5.md  pipeline.md
examples/: async_conversion_workflow.md
pipeline_artifacts/mario_game/: final_intent.json  intent_draft_claude.json  intent_draft_gpt5.json  pipeline_state.json
scripts/: configure_api.py  gpt5_bridge.py  pipeline_monitor.py  pipeline_status_display.py  verify_setup.py
