[tool.poetry]
name = "claude-agents"
version = "0.1.0"
description = "A multi-agent system powered by Claude for automated software development"
authors = ["youbin2014 <youbin2014@github.com>"]
readme = "README.md"
packages = [{include = "claude_agents"}]

[tool.poetry.dependencies]
python = "^3.9"
anthropic = "^0.18.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
aiohttp = "^3.9.0"
tenacity = "^8.2.0"
structlog = "^23.0.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"